# rast

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: backend.c  backend.h  main.c  native_gl.c  native_gl.h  primitives.c  primitives.h  shader.c  shader.h
src/math/: math.c  math.h  transform.h  vertex.c  vertex.h
src/utils/: math.h  utils.c  utils.h
